# diagrams-cli

./: CODEX.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: AGENTS.md
src/diagrams_cli/: __init__.py  __main__.py  cli.py
