[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diagrams-cli"
version = "0.1.0"
description = "Generates PlantUML and Excalidraw from JSON"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "diagrams-cli contributors" }]

[project.scripts]
diagrams-cli = "diagrams_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
